Added function that prints software version
Signed-off-by: Gilles Talis <gilles.talis@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set (VERSION_MAJOR	0)
 set (VERSION_MINOR	1)
 set (VERSION_PATCH	0)
 
+SET(SW_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
+add_definitions(-DVERSION="${SW_VERSION}")
+
 # Set C++11 as a minimum required standard
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
