--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# nlsusb
+# CurrencyConverter
 #
 project(currencyconverter C CXX)
 
@@ -10,7 +10,7 @@ set (VERSION_MINOR	1)
 set (VERSION_PATCH	0)
 
 SET(SW_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
-add_definitions(-DVERSION="${SW_VERSION}")
+add_definitions(-DVERSION="${SW_VERSION}" -Wall -Werror)
 
 # Set C++11 as a minimum required standard
 set(CMAKE_CXX_STANDARD 11)
@@ -27,15 +27,12 @@ find_package(LibXml2 REQUIRED)
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(CURL libcurl REQUIRED)
-# pkg_check_modules(NCURSES ncurses REQUIRED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CURL_INCLUDE_DIRS})
 include_directories(${LIBXML2_INCLUDE_DIR})
-# include_directories(${NCURSES_INCLUDE_DIRS})
 
-add_executable (currencyconverter src/rateManager.cpp src/main.cpp)
+add_executable (currencyconverter src/rateManager.cpp src/utils.cpp src/main.cpp)
 target_link_libraries(currencyconverter ${CURL_LIBRARIES})
 target_link_libraries(currencyconverter ${LIBXML2_LIBRARIES})
-#target_link_libraries(nlsusb ${NCURSES_LIBRARIES})
 
